# KAI

./: .auto-claude-status  .claude_settings.json  .dockerignore  .env.copy  .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  COMPOUNDING_REPORT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.langgraph  Dockerfile.worker  IMPLEMENTATION_PLAN_MDL_GENBI.md  README.md  SUMMARY.md  build.sh  delete.sh  demo.ipynb  docker-compose.fullstack.yml  docker-compose.langgraph.yml  docker-compose.yml  dockerfile  initialized.flag  langgraph.json  launch.json.example  mcp-servers.example.json  mkdocs.yml  progress.txt  pyproject.toml  pytest.ini  requirements.txt  task-analysis.json
.github/workflows/: accessibility.yml  chromatic.yml  release.yml
.skills/data-quality/: SKILL.md
.skills/example/: SKILL.md
.skills/skill-creator/: SKILL.md
api/: table-description-api.md
app/: __init__.py  main.py  server.py  worker_main.py
app/agents/: __init__.py  deep_agent_factory.py  types.py
app/api/: __init__.py  requests.py  responses.py
app/core/: app_setup.py  config.py  error.py  logging.py
app/data/: __init__.py  download_model.py
app/langgraph_server/: __init__.py  graphs.py
app/modules/: autonomous_agent_cli_current_backup.py
app/repositories/: __init__.py  database_connection.py
app/routers/: __init__.py
app/server/: __init__.py  config.py  errors.py  logging.py
app/services/: __init__.py  database_connection.py
app/storage/: __init__.py  typesense.py
app/temporal/: activities.py  sse_callback.py  workflows.py
app/utils/: const.py  constant.py  correction_detection.py  encrypt.py
bmad_docs/: ARCHITECTURE-KAI-Advanced-Analytics.md  EPICS-AND-STORIES.md  PRD-KAI-Advanced-Analytics.md
cookbook/: README.md  context_platform.py  temporal_e2e_streaming.py
cookbook/advanced/: 01_nl_generation.py  02_comprehensive_analysis.py  03_rag_documents.py
cookbook/basic/: 01_create_database_connection.py  02_list_table_descriptions.py  03_sync_schemas.py  04_create_instructions.py  05_create_context_stores.py  06_create_business_glossaries.py  07_create_prompts.py  08_sql_generation.py  09_aliases.py
cookbook/utils/: __init__.py
dataherald/: config.py
docs/: DEPLOYMENT.md  GETTING_STARTED.md  ONBOARDING.md  TROUBLESHOOTING.md  bundle-optimization-guide.md  code-splitting-guide.md  image-optimization-guide.md  page-transitions-guide.md  test-results-qa-e2e-task-85.md
docs/adr/: adr-001-use-shadcn-ui-radix-ui-tailwind.md  adr-002-zustand-for-client-state.md  adr-003-nextjs-14-app-router-with-server-components.md
docs/api/: chartviz-api.md
docs/apis/: README.md  agent-session-api.md  aliases-api.md  analysis-api.md  analytics-api.md  batch-analytics-api.md  business-glossary-api.md  chartviz-api.md  context-store-api.md  database-connection-api.md  instruction-api.md  nl-generation-api.md  prompt-api.md  question-generation-api.md  rags-api.md  session-api.md  sql-generation-api.md  table-description-api.md
docs/brainstorms/: 2026-01-28-mdl-cli-commands-brainstorm.md  2026-01-29-cli-refactor-groups-brainstorm.md  2026-02-06-cli-documentation-update-brainstorm.md  2026-02-13-kai-agentic-context-platform-brainstorm.md  2026-02-27-kai-tutorial-documentation-brainstorm.md  2026-02-27-temporal-e2e-streaming-brainstorm.md
docs/deployment/: launch-checklist.md
docs/plan/: IMPLEMENTATION_PLAN_MDL_GENBI.md
docs/plans/: 2024-11-28-session-endpoint-design.md  2024-11-28-session-endpoint-plan.md  2025-11-28-autonomous-deep-agent-plan.md  2025-12-03-deepagents-integration-spec.md  2025-12-03-python-skills-system.md  2025-12-04-mcp-integration-plan.md  2025-12-04-session-thread-management-design.md  2025-12-04-session-thread-management-implementation.md  2025-12-06-kai-advanced-analytics-implementation.md  2025-12-06-mdl-genbi-implementation.md  (+11 more)
getting-started/: environment.md  quickstart.md
migration/: README.md  __init__.py  backup_http.py  backup_restore.py  embedding_migration.py  embedding_migration_http.py
mkdocs/: README.md  requirements.txt
mkdocs/docs/: index.md  (+2 more)
modules/: nl-generation-services.md  sql-generation-services.md  table-description-service.md
specs/: agentic-context-platform.md  kai-documentation-plan.md  kai-ui-revamp-assessment.md  kai-ui-revamp.md  temporal-agent-wiring-and-context-sync.md  temporal-autonomous-agent-wiring.md  temporal-e2e-streaming-sse-callback.md
tests/: conftest.py
text2sql-agent/: Dockerfile
ui/: .chromaticrc.json  .dockerignore  .env.example  .eslintrc.json  .gitignore  ANALYTICS_GUIDE.md  BROWSER_TESTING_MATRIX.md  Dockerfile  MOBILE_TESTING_GUIDE.md  PERFORMANCE_OPTIMIZATION.md  PRODUCTION_SMOKE_TESTS.md  README.md  UI_VALIDATION_REPORT.md  VISUAL_REGRESSION_GUIDE.md  next.config.mjs  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  task-analysis.json  vitest.config.ts
(+783 files in other folders)
