[project]
name = "kai"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.112.2",
    "exceptiongroup>=1.2.2",
    "typesense>=0.19.0",
    "ruff>=0.6.2",
    "pydantic-settings>=2.4.0",
    "SQLAlchemy>=2.0.32",
    "uvicorn>=0.30.6",
    "black>=24.8.0",
    "sql-metadata>=2.13.0",
    "cryptography>=43.0.0",
    "langchain>=1.0.2,<2.0.0",
    "langchain-core>=1.0.0,<2.0.0",
    "langchain-community>=0.4.0,<1.0.0",
    "langchain-openai>=1.0.0,<2.0.0",
    "langchain-ollama>=1.0.0,<2.0.0",
    "langchain-google-genai>=3.0.0,<4.0.0",
    "langgraph>=1.0.0,<2.0.0",
    "langgraph-prebuilt>=0.1.1",
    "langgraph-cli[inmem]>=0.1.0",
    "langgraph-sdk>=0.1.0",
    # Optional: MCP (Model Context Protocol) integration
    "langchain-mcp-adapters>=0.1.14",
    "deepagents>=0.2.8",
    "overrides>=7.7.0",
    "pandas>=2.2.2",
    "scikit-learn>=1.4.0",
    "pypdf2>=3.0.1",
    "python-multipart>=0.0.9",
    "llama-index>=0.13.0",
    "llama-index-vector-stores-typesense>=0.4.0",
    "pytest>=8.3.3",
    "pytest-mock>=3.14.0",
    "pytest-asyncio>=0.24.0",
    "pyarrow>=19.0.0",
    "llama-index-llms-langchain>=0.7.0",
    "llama-index-embeddings-langchain>=0.4.0",
    "click>=8.0.0",
    "jsonschema>=4.20.0",
    "rich>=13.0.0",
    "questionary>=2.0.0",
    "matplotlib>=3.8.0",
    "openpyxl>=3.1.0",
    # Advanced visualization
    "plotly>=5.18.0",
    "kaleido>=0.2.1",
    # Statistical analysis and forecasting
    "scipy>=1.11.0",
    "statsmodels>=0.14.0",
    # SSE streaming support
    "sse-starlette>=1.6.0",
    # Pydantic AI for structured chart generation
    "pydantic-ai>=0.1.0",
    # Optional: Letta AI memory backend and auto-learning
    # Note: agentic-learning pins letta-client to a pre-release version
    # Install with: uv pip install agentic-learning --prerelease=allow
    "agentic-learning>=0.4.0",
    "psycopg2-binary>=2.9.11",
]

[project.scripts]
kai-agent = "app.modules.autonomous_agent.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
# Allow pre-release versions for letta-client (required by agentic-learning)
prerelease = "allow"
