[tool.poetry]
name = "kai"
version = "0.1.0"
description = ""
authors = ["MTA"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.112.2"
exceptiongroup = "^1.2.2"
typesense = "^0.19.0"
ruff = "^0.6.2"
pydantic-settings = "^2.4.0"
SQLAlchemy = "^2.0.32"
psycopg2-binary = "^2.9.9"
uvicorn = "^0.30.6"
black = "^24.8.0"
sql-metadata = "^2.13.0"
cryptography = "^43.0.0"
langchain = "^0.3.17"
langchain-community = "^0.3.16"
overrides = "^7.7.0"
langchain-openai = "^0.3.3"
langchain-core = "^0.3.33"
langchain-ollama = "^0.2.3"
pandas = "^2.2.2"
pypdf2 = "^3.0.1"
python-multipart = "^0.0.9"
llama-index = "^0.12.17"
llama-index-vector-stores-typesense = "^0.3.0"
pytest = "^8.3.3"
pytest-mock = "^3.14.0"
google-generativeai = "^0.8.0"
langchain-google-genai = "^2.0.9"
pyarrow = "^19.0.0"
llama-index-llms-langchain = "^0.6.0"
llama-index-embeddings-langchain = "^0.3.0"
langgraph-prebuilt = "^0.1.1"
langgraph = "0.2.73"
google-genai = "^1.62.0"
requests = "^2.32.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
